# patchwork

./: .gitignore  Cargo.toml  README.md  index.html  patchwork-21e4d3f24b64ceb5.js  patchwork-21e4d3f24b64ceb5_bg.wasm  patchwork-2dc387ecba4bff5f.js  patchwork-3b7e89c7060254ee.js  patchwork-6e7e243a74823b3c.js  patchwork-dfbbdbb843f958a2.js  patchwork-eaaa053df40235c3.js
.cargo/: config.toml
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/auth/: create.rs  mod.rs  update.rs
src/: app.rs  game.rs  main.rs
src/new_game/: chessboard.rs  game_state.rs  mod.rs  patches.rs
src/new_game/event/: mod.rs
src/ui/: mod.rs
util_lib/: Cargo.toml
util_lib/src/: lib.rs
