[package]
name = "patchwork"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom = { version = "0.3.3", features = ["wasm_js"] }
getrandom = { version = "0.3.3", default-features = false, features = ["wasm_js"] }

[dependencies]
bevy = "0.17.2"
bevy_embedded_assets = "0.14.0"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
] }
yew = { version = "0.21.0", features = ["csr"] }


