[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
oauth2 = "5.0.0"
rand = "0.9.2"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
util_lib = { path = "../util_lib" }
uuid = { version = "1.18.1", features = ["v4"] }
